--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-    color: blue;
+    color: black;
     background-color: #f8f8f8;
 }
 
@@ -14,7 +14,7 @@ h1 {
 }
 
 a {
-    text-decoration-color: ;
+    text-decoration-color: black;
 }
 
 .style-h {
@@ -107,4 +107,7 @@ a {
     border-color: white;
     border-width: 2px;
 
+}
+.style-footer {
+    text-align: center;
 }
