--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,6 @@
 body {
     color: black;
-    background-color: #f8f8f8;
+    background-color: white;
 }
 
 .menu li {
@@ -8,13 +8,16 @@ body {
     font-size: 20px;
     list-style-type: none;
 }
-
+.menu a:hover {
+    color:orange;
+}
 h1 {
     text-align: center;
 }
 
 a {
     text-decoration-color: black;
+    text-decoration: none;
 }
 
 .style-h {
@@ -65,8 +68,9 @@ a {
     height: 24px;
     width: 120px;
     color: #cccccc;
-    font-size: 11px;
+    font-size: 15px;
     font-family: Tahoma;
+    text-transform: capitalize;
 
 }
 
@@ -76,14 +80,17 @@ a {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     -khtml-border-radius: 3px;
-    background: #ffffff !important;
+    background: white !important;
     outline: none;
     height: 24px;
     width: 120px;
-    color: #cccccc;
-    font-size: 11px;
+    color: black;
+    font-size: 15px;
     font-family: Tahoma;
-
+    text-transform: capitalize;
+}
+.form-contacts-email:focus {
+    background-color: yellow;
 }
 
 .form-contacts-theme {
@@ -99,6 +106,7 @@ a {
     color: #cccccc;
     font-size: 20px;
     font-family: Tahoma;
+    text-transform: capitalize;
 }
 
 .img-product1 {
@@ -108,6 +116,7 @@ a {
     border-width: 2px;
 
 }
+
 .style-footer {
     text-align: center;
 }
