mega work lesson 5

--- a/style/style.css
+++ b/style/style.css
@@ -225,6 +225,11 @@ a {
 .header {
     border-bottom: 6px solid red;
     background-color: white;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+
 }
 
 .buy {
@@ -243,31 +248,24 @@ a {
     font-weight: 600;
     color: white;
     background: red;
-    box-shadow: 0 8px 15px rgba(0,0,0,.1);
+    box-shadow: 0 8px 15px rgba(0, 0, 0, .1);
     transition: .3s;
 
 }
+
 .buy:hover {
     background: #2EE59D;
-    box-shadow: 0 15px 20px rgba(46,229,157,.4);
+    box-shadow: 0 15px 20px rgba(46, 229, 157, .4);
     color: white;
     transform: translateY(-7px);
 }
 
 
 .container {
-    width: 1200px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
-.header {
-    height: 200px;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
 
 .logo {
     margin-left: 30px;
@@ -277,10 +275,24 @@ a {
     float: left;
     margin-right: 30px;
 }
+
 .catalog-main {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+
 }
+
+.catalog-a {
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-top: 0;
+    padding-left: 90px;
+    padding-right: 30px;
+    margin-bottom: 30px;
+
+}
+
 .map {
     display: flex;
     width: 100%;
